# Max-Verstappen

./: .gitignore  README.md  exampleProgram.verstappen  max-verstappen.cabal
app/: Main.hs
src/: execution.hs  functionality.hs  mappings.hs  parser.hs
